fix wrapping issue https://trello.com/c/RR6JnWE4/1348-need-to-wrap-checkbox-in-feedback-form

--- a/shared/ui/styles/codemarks.less
+++ b/shared/ui/styles/codemarks.less
@@ -158,7 +158,7 @@
 		background: @base-background-color;
 		height: auto;
 		box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-		max-height: 80%;
+		max-height: 90%;
 		overflow-y: auto;
 
 		transition: transform 0.2s, box-shadow 0.2s, margin-top 0.2s;
